@@ -29,8 +29,5 @@ bcdui.3rdPartyJs.fileSaver      = 1.3.3
 bcdui.3rdPartyJs.d3-format      = 1.3.2
 bcdui.3rdPartyJs.echarts        = 4.4.0
 
-#deprecated
-bcdui.3rdPartyJs.jquery-mobile  = 1.3.1
-
 #misc
 bcdui.3rdPartyJs.modernizr.feature-detects = "input", "inputtypes"
