@@ -11,6 +11,7 @@ Some changes are backward incompatible and may require code change in the projec
 
 .Major new features:
 * update to jQuery 3.6.0
+* removal of jQuery Mobile
 
 .Incompatibilities:
 * due to a security fix in latest jQuery, be sure you don't use self closing html elements in jQuery.append()/etc. (Example: <span/> -> <span></span>)
